# real-time-ml-vehicle-detection

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
api/: package-lock.json  package.json
inference-svc/: Dockerfile  compose.yaml  gunicorn.conf.py  pyproject.toml
inference-svc/src/rtvd/: inference.py  logging_config.py  rtsp_stream.py  server.py  status_store.py  task_queue.py
src/: inference.py  rtsp_stream.py  task_queue_asyncio.py  task_queue_thread.py
src/rtvd/: inference.py  rtsp_stream.py  server.py  task_queue.py
ui/: index.html  middleware.js  package-lock.json  package.json
ui/src/: App.vue
ui/src/assets/: base.css  parking.css
ui/src/views/: ParkingStatus.vue  ParkingView.vue
