[project]
name = "real-time-ml-vehicle-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Rob Butcher"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.3.182,<9.0.0)",
    "flask (>=3.1.2,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
