[project]
name = "real-time-ml-vehicle-detection-inference-svc"
version = "0.1.0"
description = ""
authors = [
    {name = "Rob Butcher"}
]
requires-python = ">=3.11"
dependencies = [
    "ultralytics (>=8.3.182,<9.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "opencv-python-headless (>=4.10,<5.0)",
    "requests (>=2.31.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "rtvd", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
